# TheCalcularoty

./: .gitignore  Cargo.toml  README.md  ]:w  build.rs  index.html
.cargo/: config.toml
installer/: Calcularoty.iss
src/: android.rs  calculations.rs  consts.rs  conversions.rs  lib.rs  logic.rs  main.rs  not_android.rs  traits.rs  types.rs  units.rs  utils.rs  wasm.rs
ui/: App.slint  IMP.slint  LC.slint  Menu.slint  components.slint
