cargo-features = ["panic-immediate-abort"]

[package]
name = "the_calcularoty"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true
opt-level = 'z'
lto = true
panic = "immediate-abort"
codegen-units = 1
debug = "none"
split-debuginfo = "packed"

[target.'cfg(target_os = "android")'.profile.release]
lto = false

[dependencies]
astro-float = "0.9.5"
num-complex = "0.4.6"
num-traits = "0.2.19"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.11.2"
rodio = {version = "0.21.1", default-features = false, features = ["playback", "mp3"]}
slint = {version = "*", features = ["std", "backend-default", "compat-1-2", "renderer-femtovg", "renderer-software"], default-features = false}

#[target.'cfg(target_os = "android")'.dependencies]
#ndk = "0.9.0"

[build-dependencies]
slint-build = "*"

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
build_targets = [ "aarch64-linux-android"]
package = "com.rectifier.calcularoty"
resources = "res"
assets = "assets"
strip = "strip"
apk_name = "TheCalcularoty"

[package.metadata.android.application]
label = "Calcularoty"
icon = "@mipmap/ic_launcher"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[package.metadata.android.signing.release]
path = "../../Android/Keystores/release.keystore"
keystore_password = "52345241"
