cargo-features = ["panic-immediate-abort"]

[package]
name = "the_calcularoty"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[profile.release]
strip = true
opt-level = 'z'
lto = true
panic = "abort"
codegen-units = 1
debug = "none"
split-debuginfo = "packed"

[target.'cfg(target_os = "android")'.profile.release]
lto = false

[dependencies]
astro-float = { version = "0.9.5", default-features = false }
dlmalloc = { version = "0.2.11", features = ["global"] }
num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
phf = { version = "0.13.1", features = ["macros"], default-features = false}
regex = { version = "1.11.2", default-features = false }
slint = {version = "*", features = ["backend-default", "compat-1-2", "renderer-software", "backend-android-activity-06"], default-features = false}
spin = "0.10.0"

#[target.'cfg(target_os = "android")'.dependencies]
#ndk = "0.9.0"

[build-dependencies]
slint-build = "*"

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
build_targets = [ "aarch64-linux-android"]
package = "com.rectifier.calcularoty"
resources = "res"
assets = "assets"
strip = "strip"
apk_name = "TheCalcularoty"

[package.metadata.android.application]
label = "Calcularoty"
icon = "@mipmap/ic_launcher"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[package.metadata.android.signing.release]
path = "../../Android/Keystores/release.keystore"
keystore_password = "52345241"
